--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 Games::Chess::Referee
-Version 0.002
+Version 0.003
 Gregor N. Purdy
 gregor@focusresearch.com
-http://www.focusresearch.com/gregor/index.html
-1999-04-19
+http://www.focusresearch.com/gregor/
+2006-03-26
 
-Copyright (C) 1999 Gregor N. Purdy. All rights reserved.
+Copyright (C) 1999-2006 Gregor N. Purdy. All rights reserved.
 This program is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself.
 
@@ -34,7 +34,7 @@ They are intended to be used with the patch program (see below).
 The patches are to Chess.pm and Chess.pod, and fix a small bug and
 address some discrepancies between the documentation and the code:
 
- 1. Changed `Games::Picece->new' to `Games::Chess:Piece->new' in
+ 1. Changed `Games::Piece->new' to `Games::Chess::Piece->new' in
     one place.
 
  2. can_castle() is changed to accept a color and a piece, per the
